# mumaxplus

./: CHANGELOG.md  CLAUDE.md  pyproject.toml  setup.py
.flox/: env.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
docs/: conf.py
examples/: Bloch_wall.py  DW_rigid_strain_SAW.py  Heisenberg_exchange_spiral.py  Heisenberg_exchange_spiral_afm.py  LLtorque.py  MRAM_bit_switch.py  anisotropy.py  antiferromagnetic-resonance.py  bench.py  electricpotential.py  errorscaling.py  langevin.py  magnetoelastic.py  magnetoelastic_dispersion.py  magnetoelastic_dispersion_afm.py  mfm.py  multilayer.py  periodic_bc.py  poissonsolver.py  pure_elastic.py  skyrmion_excitation.py  skyrmionracetrack.py  spinwave_dispersion.py  spinwave_dispersion_afm.py  standardproblem2.py  standardproblem3.py  standardproblem4.py  standardproblem5.py  temperature.py  voronoi.py
mumaxplus/: __init__.py  antiferromagnet.py  dmitensor.py  ferromagnet.py  fieldquantity.py  grid.py  interparameter.py  magnet.py  ncafm.py  parameter.py  poissonsystem.py  scalarquantity.py  strayfield.py  timesolver.py  traction.py  variable.py  world.py
test/: test_DMI_1D_afm.py  test_DMI_1D_ncafm.py  test_DMI_2D_afm.py  test_DMI_2D_ncafm.py  test_DMI_3D_afm.py  test_DMI_3D_ncafm.py  test_PBC.py  test_PBC_interface.py  test_angle_ncafm.py  test_anisotropy.py  test_average.py  test_boundaries.py  test_boundary_traction.py  test_conductivitytensor.py  test_demag.py  test_domain_wall_afm.py  test_elastic_acceleration.py  test_elastic_energies.py  test_elasticforce_uniform_c.py  test_exchange.py  test_exchange_afm.py  (+30 more)
(+25 files in other folders)
