[tool.black]
target-version = ['py37', 'py38']
force-exclude = '''
(
  /(
      \.git
      | build
      | examples
      | docs
      | src/bindings/pybind11
  )/
)
'''

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra -q --verbose'
testpaths = ['test']
[build-system]
requires = ["setuptools", "cmake"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["magnon"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
